<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="?attr/actionBarSize"
                                            android:background="?attr/colorPrimary"
                                            android:theme="@style/AppTheme.AppBarOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_icon_appbar"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-8dp"
            android:layout_marginRight="-8dp"
            android:contentDescription="@string/search"
            android:padding="16dp"
            android:src="@drawable/ic_search_white_24dp"
            android:tint="@color/colorAccentDark"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/search_icon_appbar"
            android:layout_toLeftOf="@+id/layout_appbar_buttons"
            android:layout_toRightOf="@+id/search_icon_appbar"
            android:layout_toStartOf="@+id/layout_appbar_buttons">

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:imeOptions="flagNoExtractUi"
                android:paddingEnd="36dp"
                android:paddingRight="36dp"
                android:singleLine="true"
                android:textColor="@color/colorAccentDark"
                android:textColorHint="@color/colorAccentDark"/>

            <ImageButton
                android:id="@+id/appbar_button_clear"
                style="@style/SearchButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_close_white_24dp"/>

            <ImageButton
                android:id="@+id/appbar_button_voice"
                style="@style/SearchButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/voiceInput"
                android:src="@drawable/ic_keyboard_voice_white_24dp"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_appbar_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/appbar_button_settings"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/ripple"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings_white_24dp"
                android:tint="@color/colorAccentDark"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.AppBarLayout>